--- a/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
+++ b/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
@@ -42,9 +42,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = r\"C:/Users/loren/Desktop/PRS_L2D_STD_20240429095823_20240429095827_0001\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
-    "ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\")\n",
-    "ds"
+    "# file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "# ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\")\n",
+    "# ds"
    ]
   },
   {
@@ -53,29 +53,29 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# plot PRISMA L2D cube\n",
-    "wavelengths = ds.wavelength.values\n",
-    "r_idx = np.abs(wavelengths - 660).argmin()\n",
-    "g_idx = np.abs(wavelengths - 560).argmin()\n",
-    "b_idx = np.abs(wavelengths - 490).argmin()\n",
+    "# # plot PRISMA L2D cube\n",
+    "# wavelengths = ds.wavelength.values\n",
+    "# r_idx = np.abs(wavelengths - 660).argmin()\n",
+    "# g_idx = np.abs(wavelengths - 560).argmin()\n",
+    "# b_idx = np.abs(wavelengths - 490).argmin()\n",
     "\n",
-    "rgb = np.stack(\n",
-    "    [\n",
-    "        ds.reflectance.values[:, :, r_idx],\n",
-    "        ds.reflectance.values[:, :, g_idx],\n",
-    "        ds.reflectance.values[:, :, b_idx],\n",
-    "    ],\n",
-    "    axis=-1,\n",
-    ")\n",
+    "# rgb = np.stack(\n",
+    "#     [\n",
+    "#         ds.reflectance.values[:, :, r_idx],\n",
+    "#         ds.reflectance.values[:, :, g_idx],\n",
+    "#         ds.reflectance.values[:, :, b_idx],\n",
+    "#     ],\n",
+    "#     axis=-1,\n",
+    "# )\n",
     "\n",
-    "# rgb = np.clip(rgb, 0, 1)\n",
-    "rgb_stretch = (rgb - rgb.min()) / (rgb.max() - rgb.min())\n",
+    "# # rgb = np.clip(rgb, 0, 1)\n",
+    "# rgb_stretch = (rgb - rgb.min()) / (rgb.max() - rgb.min())\n",
     "\n",
-    "plt.imshow(rgb_stretch)\n",
-    "plt.title(\"PRISMA RGB Composite\")\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"y\")\n",
-    "plt.show()"
+    "# plt.imshow(rgb_stretch)\n",
+    "# plt.title(\"PRISMA RGB Composite\")\n",
+    "# plt.xlabel(\"x\")\n",
+    "# plt.ylabel(\"y\")\n",
+    "# plt.show()"
    ]
   },
   {
@@ -91,8 +91,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds_pan = read_prismaL2D_pan(file)\n",
-    "ds_pan"
+    "# ds_pan = read_prismaL2D_pan(file)\n",
+    "# ds_pan"
    ]
   },
   {
@@ -101,13 +101,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Plot the panchromatic reflectance\n",
-    "plt.imshow(ds_pan.reflectance.values, cmap=\"gray\", vmin=0, vmax=1)\n",
-    "plt.title(\"PRISMA Panchromatic Reflectance\")\n",
-    "plt.xlabel(\"x\")\n",
-    "plt.ylabel(\"y\")\n",
-    "plt.colorbar(label=\"Reflectance\")\n",
-    "plt.show()"
+    "# # Plot the panchromatic reflectance\n",
+    "# plt.imshow(ds_pan.reflectance.values, cmap=\"gray\", vmin=0, vmax=1)\n",
+    "# plt.title(\"PRISMA Panchromatic Reflectance\")\n",
+    "# plt.xlabel(\"x\")\n",
+    "# plt.ylabel(\"y\")\n",
+    "# plt.colorbar(label=\"Reflectance\")\n",
+    "# plt.show()"
    ]
   }
  ],
