--- a/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
+++ b/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prismatools.common import read_prismaL2D, read_prismaL2D_pan\n",
+    "from prismatools.common import read_prismaL2D\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
    ]
