Update proj structure

--- a/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
+++ b/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
@@ -24,9 +24,60 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prismatools.common import read_prismaL2D\n",
+    "from prismatools.prisma import read_prismaL2D, extract_prisma\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\", panchromatic=False)\n",
+    "ds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "res = extract_prisma(dataset=ds, lat=41.4468, lon=15.4646)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# debugging\n",
+    "# if __name__ == \"__main__\":\n",
+    "#     file = r\"C:/Users/loren/Desktop/PRS_L2D_STD_20240429095823_20240429095827_0001\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "#     ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\")\n",
+    "#     print(ds)\n",
+    "\n",
+    "#     ds_pan = read_prismaL2D(file, panchromatic=True)\n",
+    "#     print(ds_pan)\n",
+    "\n",
+    "#     # case1a: Pan from path (è necessario specificare se è pan o meno)\n",
+    "#     write_prismaL2D(file, output=r'..\\out_test\\imgPan_path_pan.tif', panchromatic=True)\n",
+    "#     # case1b: Cube from path\n",
+    "#     write_prismaL2D(file, output=r'..\\out_test\\imgPan_path_cube.tif')\n",
+    "\n",
+    "#     # case2a: Pan from dataset\n",
+    "#     write_prismaL2D(ds_pan, output=r'..\\out_test\\imgPan_ds.tif')\n",
+    "#     # case2b: Cube from dataset\n",
+    "#     write_prismaL2D(ds, output=r'..\\out_test\\imgCube_ds.tif')\n",
+    "\n",
+    "#     # case3 : Cube in ENVI format\n",
+    "#     write_prismaL2D(file, output=r'..\\out_test\\imgCube_ds.dat', panchromatic=False)\n",
+    "#     write_prismaL2D(file, output=r'..\\out_test\\imgPanc_ds.dat', panchromatic=True)"
    ]
   },
   {
@@ -42,9 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
-    "# ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\")\n",
-    "# ds"
+    "file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\")\n",
+    "ds"
    ]
   },
   {
