--- a/docs/examples/02_visualize_prisma.ipynb
+++ b/docs/examples/02_visualize_prisma.ipynb
@@ -37,7 +37,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# ds = prismatools.read_prismaL2D(file_path=filepath)"
+    "# ds = prismatools.read_prismaL2D(file_path=filepath)\n",
+    "# ds"
    ]
   },
   {
