--- a/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
+++ b/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
@@ -24,9 +24,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from prismatools.prisma import read_prismaL2D, extract_prisma\n",
-    "import numpy as np\n",
-    "import matplotlib.pyplot as plt"
+    "# from prismatools.prisma import read_prismaL2D, extract_prisma\n",
+    "# import numpy as np\n",
+    "# import matplotlib.pyplot as plt"
    ]
   },
   {
@@ -35,9 +35,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
-    "ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\", panchromatic=False)\n",
-    "ds"
+    "# file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "# ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\", panchromatic=False)\n",
+    "# ds"
    ]
   },
   {
@@ -46,8 +46,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "res = extract_prisma(dataset=ds, lat=41.4468, lon=15.4646)\n",
-    "res"
+    "# res = extract_prisma(dataset=ds, lat=41.4468, lon=15.4646)\n",
+    "# res"
    ]
   },
   {
