--- a/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
+++ b/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
@@ -93,9 +93,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
-    "ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\")\n",
-    "ds"
+    "# file = r\"..\\..\\data\\PRS_L2D_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "# ds = read_prismaL2D(file, wavelengths=None, method=\"nearest\")\n",
+    "# ds"
    ]
   },
   {
