--- a/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
+++ b/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
@@ -24,7 +24,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from prismatools.prisma import read_prismaL2D, extract_prisma\n",
+    "# from prismatools.prisma import read_prismaL2D, write_prismaL2D, extract_prisma\n",
     "# import numpy as np\n",
     "# import matplotlib.pyplot as plt"
    ]
@@ -48,6 +48,15 @@
    "source": [
     "# res = extract_prisma(dataset=ds, lat=41.4468, lon=15.4646)\n",
     "# res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# write_prismaL2D(file, output=r'..\\..\\out_test\\imgTest.tif')"
    ]
   },
   {
