--- a/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
+++ b/docs/examples/01_reading_and_exporting_PRISMA_cube.ipynb
@@ -169,6 +169,37 @@
     "# plt.colorbar(label=\"Reflectance\")\n",
     "# plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 03. write L2C and L2B PRISMA products "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# from prismatools.prisma import write_prismaL2BC"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# file = r\"..\\..\\data\\PRS_L2C_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "# write_prismaL2BC(file, output=r'..\\..\\..\\out_test\\imgCube_L2C_hyp.tif', product_type='PRS_L2C', panchromatic=False)\n",
+    "# write_prismaL2BC(file, output=r'..\\..\\..\\out_test\\imgCube_L2C_pan.tif', product_type='PRS_L2C', panchromatic=True)\n",
+    "\n",
+    "# file = r\"..\\..\\data\\PRS_L2B_STD_20240429095823_20240429095827_0001.he5\"\n",
+    "# write_prismaL2BC(file, output=r'..\\..\\..\\out_test\\imgCube_L2B_hyp.tif', product_type='PRS_L2B', panchromatic=False)\n",
+    "# write_prismaL2BC(file, output=r'..\\..\\..\\out_test\\imgCube_L2B_pan.tif', product_type='PRS_L2B', panchromatic=True)"
+   ]
   }
  ],
  "metadata": {
